--- a/filter/index.html
+++ b/filter/index.html
@@ -5,11 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>js filter</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/filter/css/style.css">
 </head>
 
 <body>
-  <h1>js filter</h1>
+  <section class="banner min-h-[542px] py-[122px] flex flex-wrap items-center bg-[#D3D7D7] relative">
+    <div class="bg-img absolute right-0 bottom-0 w-full h-full z-[1]">
+      <img src="/filter/images/book.png" alt="book" class="h-full w-full object-contain object-bottom lg:object-right">
+    </div>
+    <div class="container">
+      <div class="heading-wrap max-w-[570px] relative z-[1]">
+        <p class="text-[14px] font-bold uppercase text-[#282728]">RESOURCES</p>
+        <h1 class="text-[#282728] text-[48px] font-bold">Resource Center</h1>
+      </div>
+    </div>
 
+  </section>
+
+  <section class="resource py-[96px]">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <script src="/filter/js/main.js"></script>
 </body>
 
 </html>
