fetch list data

--- a/filter/index.html
+++ b/filter/index.html
@@ -25,7 +25,25 @@
 
   <section class="resource py-[96px]">
     <div class="container">
-
+      <form id="filter-form" class="mb-8 flex flex-wrap gap-6 items-center">
+        <h6 class="text-black font-medium w-full sm:w-auto text-[20px] inline-block">Filter By:</h6>
+        <div class="selectbox relative inline-block align-top">
+          <div
+            class="box cursor-pointer m-0 overflow-hidden block relative text-[16px] w-[215px] px-[10px] py-[11px] rounded-[5px] max-h-[42px] text-[#D3D7D7]">
+            All Types
+          </div>
+          <ul class="selectbox-list overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px]">
+          </ul>
+        </div>
+        <div class="selectbox relative inline-block align-top">
+          <div
+            class="box cursor-pointer m-0 overflow-hidden block relative text-[16px] w-[215px] px-[10px] py-[11px] rounded-[5px] max-h-[42px] text-[#D3D7D7]">
+            All Categories
+          </div>
+          <ul class="selectbox-list overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px]">
+          </ul>
+        </div>
+      </form>
     </div>
   </section>
 
