--- a/filter/index.html
+++ b/filter/index.html
@@ -32,7 +32,7 @@
             class="box capitalize cursor-pointer m-0 overflow-hidden block relative text-[16px] w-[215px] px-[10px] py-[11px] rounded-[5px] max-h-[42px] text-[#D3D7D7]">
           </div>
           <ul
-            class="selectbox-list h-0 overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px] transition-all duration-300 ease-in-out">
+            class="selectbox-list z-[5] h-0 overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px] transition-all duration-300 ease-in-out">
           </ul>
         </div>
 
@@ -42,7 +42,7 @@
             class="box capitalize cursor-pointer m-0 overflow-hidden block relative text-[16px] w-[215px] px-[10px] py-[11px] rounded-[5px] max-h-[42px] text-[#D3D7D7]">
           </div>
           <ul
-            class="selectbox-list h-0  overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px] transition-all duration-300 ease-in-out">
+            class="selectbox-list z-[5] h-0  overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px] transition-all duration-300 ease-in-out">
           </ul>
         </div>
       </form>
