--- a/filter/index.html
+++ b/filter/index.html
@@ -53,6 +53,11 @@
       <div id="post-container" class="min-h-[600px]">
         <div class="wrapper w-[calc(100%%+24px)] relative ml-[-12px] flex flex-wrap">
         </div>
+
+        <div
+          class="ajax-pagination mt-[48px] pt-[14px] border-t border-darkGray flex flex-wrap relative justify-center gap-2">
+
+        </div>
       </div>
     </div>
   </section>
