--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>js filter</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="/filter/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <section class="banner min-h-[542px] py-[122px] flex flex-wrap items-center bg-[#D3D7D7] relative">
     <div class="bg-img absolute right-0 bottom-0 w-full h-full z-[1]">
-      <img src="/filter/images/book.png" alt="book" class="h-full w-full object-contain object-bottom lg:object-right">
+      <img src="/images/book.png" alt="book" class="h-full w-full object-contain object-bottom lg:object-right">
     </div>
     <div class="container">
       <div class="heading-wrap max-w-[570px] relative z-[1]">
@@ -62,7 +62,7 @@
     </div>
   </section>
 
-  <script src="/filter/js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
