--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div id="post-container" class="min-h-[600px]">
-        <div class="wrapper w-[calc(100%%+24px)] relative ml-[-12px] flex flex-wrap">
+        <div class="wrapper w-[calc(100%+24px)] relative ml-[-12px] flex flex-wrap">
         </div>
 
         <div
