added insight page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             class="selectbox-list z-[5] h-0  overflow-y-scroll absolute top-[43px] left-0 w-full bg-white max-h-[290px] transition-all duration-300 ease-in-out">
           </ul>
         </div>
+
+        <div class="btn-wrap">
+          <a href="/insight.html"
+            class="bg-[#80DDF9] text-black text-[14px] font-bold rounded-[3px] py-[12px] px-[24px]">insight
+            filter</a>
+        </div>
       </form>
 
       <div class="current-filter mb-4 min-h-[40px]">
