--- a/insight.html
+++ b/insight.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+  <section class="banner min-h-[542px] py-[122px] flex flex-wrap items-center bg-[#D3D7D7] relative">
+    <div class="bg-img absolute right-0 bottom-0 w-full h-full z-[1]">
+      <img src="/images/book.png" alt="book" class="h-full w-full object-contain object-bottom lg:object-right">
+    </div>
+    <div class="container">
+      <div class="heading-wrap max-w-[570px] relative z-[1]">
+        <p class="text-[14px] font-bold uppercase text-[#282728]">RESOURCES</p>
+        <h1 class="text-[#282728] text-[48px] font-bold">Resource Center</h1>
+      </div>
+    </div>
+  </section>
 
   <script src="/js/insight.js"></script>
 </body>
