added filter tab

--- a/insight.html
+++ b/insight.html
@@ -22,6 +22,33 @@
     </div>
   </section>
 
+  <section class="insights-filter p-0">
+    <div class="filter-outer bg-[#005677] py-[20px]">
+      <div class="container">
+        <div class="wrap flex flex-wrap justify-between items-center">
+          <div class="dropdown-outer flex flex-wrap">
+            <div class="select-wrap mr-[37px]">
+              <span class="audience text-white text-[16px] font-semibold">Audience</span>
+            </div>
+            <div class="select-wrap mr-[37px]">
+              <span class="author-category text-white text-[16px] font-semibold">Author</span>
+            </div>
+            <div class="select-wrap mr-[37px]">
+              <span class="content-type text-white text-[16px] font-semibold">Content Type</span>
+            </div>
+            <div class="select-wrap mr-[37px]">
+              <span class="product text-white text-[16px] font-semibold">Product</span>
+            </div>
+          </div>
+          <div class="search-outer max-w-[392px] w-full relative rounded-[4px] overflow-hidden">
+            <input type="search" placeholder="Search insights"
+              class="w-full py-[8px] pr-[63px] pl-[15px] rounded-[4px] border border-[#415363] text-[18px] text-black bg-white h-[40px]">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="/js/insight.js"></script>
 </body>
 
