--- a/insight.html
+++ b/insight.html
@@ -37,12 +37,28 @@
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
               <span class="author-category text-white text-[16px]  pr-[20px] font-semibold">Author</span>
+              <div
+                class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
+                <ul id="authorList" class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
+                </ul>
+              </div>
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
               <span class="content-type text-white text-[16px]  pr-[20px] font-semibold">Content Type</span>
+              <div
+                class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
+                <ul id="content-typeList"
+                  class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
+                </ul>
+              </div>
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
               <span class="product text-white text-[16px]  pr-[20px] font-semibold">Product</span>
+              <div
+                class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
+                <ul id="productList" class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
+                </ul>
+              </div>
             </div>
           </div>
           <div class="search-outer max-w-[392px] w-full relative rounded-[4px] overflow-hidden">
