--- a/insight.html
+++ b/insight.html
@@ -16,8 +16,8 @@
     </div>
     <div class="container">
       <div class="heading-wrap max-w-[570px] relative z-[1]">
-        <p class="text-[14px] font-bold uppercase text-[#282728]">RESOURCES</p>
-        <h1 class="text-[#282728] text-[48px] font-bold">Resource Center</h1>
+        <p class="text-[14px] font-bold uppercase text-[#282728]">INSIGHTS</p>
+        <h1 class="text-[#282728] text-[48px] font-bold">Insights Center</h1>
       </div>
     </div>
   </section>
