--- a/insight.html
+++ b/insight.html
@@ -68,6 +68,21 @@
         </div>
       </div>
     </div>
+    <div class="layout-wrap bg-white py-[20px]">
+      <div class="container">
+        <div class="wrap flex space-between items-center">
+          <div class="selected-tags">
+
+          </div>
+          <div class="btn-with-text">
+            <span class="showing-calc-result">Showing 1-21 results of 136</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-outer py-[64px] bg-[#f2f2f3]">
+
+    </div>
   </section>
 
   <script src="/js/insight.js"></script>
