--- a/insight.html
+++ b/insight.html
@@ -81,7 +81,11 @@
       </div>
     </div>
     <div class="card-outer py-[64px] bg-[#f2f2f3]">
+      <div class="container">
+        <div class="wrapper flex flex-wrap">
 
+        </div>
+      </div>
     </div>
   </section>
 
