--- a/insight.html
+++ b/insight.html
@@ -85,6 +85,10 @@
         <div class="wrapper flex flex-wrap">
 
         </div>
+        <div
+          class="ajax-pagination mt-[48px] pt-[14px] border-t border-darkGray flex flex-wrap relative justify-center gap-2">
+
+        </div>
       </div>
     </div>
   </section>
