add search code

--- a/insight.html
+++ b/insight.html
@@ -63,7 +63,7 @@
           </div>
           <div class="search-outer max-w-[392px] w-full relative rounded-[4px] overflow-hidden">
             <input type="search" placeholder="Search insights"
-              class="w-full py-[8px] pr-[63px] pl-[15px] rounded-[4px] border border-[#415363] text-[18px] text-black bg-white h-[40px]">
+              class="w-full py-[8px] outline-none pr-[63px] pl-[15px] rounded-[4px] border border-[#415363] text-[18px] text-black bg-white h-[40px]">
           </div>
         </div>
       </div>
