--- a/insight.html
+++ b/insight.html
@@ -33,6 +33,7 @@
                 class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
                 <ul id="audienceList" class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
                 </ul>
+                <span class="clear-selection">Clear selection</span>
               </div>
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
@@ -41,6 +42,7 @@
                 class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
                 <ul id="authorList" class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
                 </ul>
+                <span class="clear-selection">Clear selection</span>
               </div>
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
@@ -50,6 +52,7 @@
                 <ul id="content-typeList"
                   class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
                 </ul>
+                <span class="clear-selection">Clear selection</span>
               </div>
             </div>
             <div class="select-wrap relative mr-[37px] cursor-pointer">
@@ -58,6 +61,7 @@
                 class="option-wrap absolute top-[calc(100%+10px)] left-0 w-[350px] h-0 bg-white   transiton-all duration-300 ease-in-out z-[10] rounded-[8px] overflow-hidden">
                 <ul id="productList" class="max-h-[422px] pt-[24px] pr-[26px] pb-[31px] pl-[16px] overflow-y-scroll">
                 </ul>
+                <span class="clear-selection">Clear selection</span>
               </div>
             </div>
           </div>
