added clear all btn

--- a/insight.html
+++ b/insight.html
@@ -87,7 +87,7 @@
 
           </div>
           <div class="btn-with-text">
-            <span class="showing-calc-result">Showing 1-21 results of 136</span>
+            <!--     <span class="showing-calc-result">Showing 1-21 results of 136</span> -->
           </div>
         </div>
       </div>
