added showing results

--- a/insight.html
+++ b/insight.html
@@ -87,14 +87,16 @@
 
           </div>
           <div class="btn-with-text">
-            <!--     <span class="showing-calc-result">Showing 1-21 results of 136</span> -->
+          </div>
+          <div class="calc-result">
+            <span class="showing-calc-result"></span>
           </div>
         </div>
       </div>
     </div>
     <div class="card-outer py-[64px] bg-[#f2f2f3]">
       <div class="container">
-        <div class="wrapper flex flex-wrap">
+        <div class="wrapper flex flex-wrap ml-[-12px] w-[calc(100%+24px)]">
 
         </div>
         <div class="ajax-pagination  flex flex-wrap relative justify-center gap-2">
