--- a/insight.html
+++ b/insight.html
@@ -112,7 +112,7 @@
         </div>
       </div>
     </div>
-    <div class="card-outer py-[64px] bg-[#f2f2f3] ">
+    <div class="card-outer py-[64px] bg-[#f2f2f3]  transition-opacity duration-300">
       <div class="container">
         <div class="wrapper flex flex-wrap ml-[-12px] w-[calc(100%+24px)]">
 
